# lv2tutorial

./: .clangd  .editorconfig  .gitignore  .gitmodules  404.html  AUTHORS  CMakeLists.txt  LICENSE  README.md  index.html  mkdocs.yml  sitemap.xml  usefulinc.ttl
.github/workflows/: build.yml
1_00_announce/: index.html
1_01_what_is_lv2/: index.html
1_02_simple_amp_1/: index.html
1_03_how_lv2_plugins_work/: index.html
1_04_simple_amp_2/: index.html
1_05_sound_gen_cpp/: index.html
1_06_atom_urids_uris/: index.html
1_07_simplest_midi_synth_1/: index.html
1_08_simplest_midi_synth_2/: index.html
1_09_waveform_synth_cpp11/: index.html
1_10_performance_polyphony/: index.html
1_11_programming_rt_audio/: index.html
1_12_synthesis_aliasing_polyblep/: index.html
2_00_announce/: index.html
2_01_lv2_ui_intro/: index.html
2_02_simple_plugin_ui_gtk_1/: index.html
2_03_simple_plugin_ui_gtk_2/: index.html
2_04_whats_so_bad_gtk/: index.html
2_05_simple_plugin_ui_xputty_1/: index.html
2_06_simple_plugin_ui_xputty_2/: index.html
2_07_simple_plugin_ui_bwidgets/: index.html
2_08_modern_style_synth_ui/: index.html
2_09_vintage_style_synth_ui/: index.html
LV2Stub/: CMakeLists.txt  LV2Stub.ttl  README.md  makefile  manifest.ttl
LV2Stub/src/: LV2Plugin.cpp  LV2Plugin.hpp  Ports.hpp  Urids.hpp
common/stylesheets/: github.css
docs/: 1_00_announce.md  1_01_what_is_lv2.md  1_02_simple_amp_1.md  1_03_how_lv2_plugins_work.md  1_04_simple_amp_2.md  1_05_sound_gen_cpp.md  1_06_atom_urids_uris.md  1_07_simplest_midi_synth_1.md  1_08_simplest_midi_synth_2.md  1_09_waveform_synth_cpp11.md  1_10_performance_polyphony.md  1_11_programming_rt_audio.md  1_12_synthesis_aliasing_polyblep.md  2_00_announce.md  2_01_lv2_ui_intro.md  2_02_simple_plugin_ui_gtk_1.md  2_03_simple_plugin_ui_gtk_2.md  2_04_whats_so_bad_gtk.md  2_05_simple_plugin_ui_xputty_1.md  2_06_simple_plugin_ui_xputty_2.md  2_07_simple_plugin_ui_bwidgets.md  2_08_modern_style_synth_ui.md  2_09_vintage_style_synth_ui.md  build.md  index.md
myAmp/: CMakeLists.txt  manifest.ttl  myAmp.c  myAmp.ttl
myAmp_BWidgets/: manifest.ttl  myAmp.c  myAmp.ttl  myAmp_BWidgets.cpp  myAmp_BWidgets.hpp
myAmp_GTK/: CMakeLists.txt  manifest.ttl  myAmp.c  myAmp_GTK.cpp
myAmp_GTK3/: CMakeLists.txt  manifest.ttl  myAmp.c  myAmp.ttl  myAmp_GTK3.cpp  myAmp_GTK3.hpp
myAmp_Xputty/: CMakeLists.txt  manifest.ttl  myAmp.c  myAmp.ttl  myAmp_Xputty.cpp  myAmp_Xputty.hpp
mySPBSynth/: PortGroups.hpp  manifest.ttl  mySPBSynth.cpp  mySPBSynth.ttl  mySPBSynth_ui.cpp  mySPBSynth_ui.hpp
mySPBSynth_vintage/: BMap.hpp  ControlLimits.hpp  ControlPorts.hpp  Limit.hpp  LinearFader.hpp  Urids.hpp  Waveform.hpp  manifest.ttl  mySPBSynth_vintage.cpp  mySPBSynth_vintage.ttl  mySPBSynth_vintage_ui.cpp  mySPBSynth_vintage_ui.hpp
mySimplePolyBlepSynth/: CMakeLists.txt  Envelope.hpp  Key.hpp  manifest.ttl  mySimplePolyBlepSynth.cpp  mySimplePolyBlepSynth.ttl
mySimplePolySynth/: BMap.hpp  Key.hpp  KeyStatus.hpp  manifest.ttl  mySimplePolySynth.cpp  mySimplePolySynth.ttl
mySimpleSynth/: CMakeLists.txt  mySimpleSynth.cpp  mySimpleSynth.ttl
mySimpleSynth_1/: CMakeLists.txt  Key.hpp  manifest.ttl  mySimpleSynth.cpp
mySineSynth/: CMakeLists.txt  manifest.ttl  mySineSynth.cpp  mySineSynth.ttl
myTestTone/: CMakeLists.txt  manifest.ttl  myTestTone.cpp  myTestTone.ttl
search/: search_index.json
